--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="link">Link: </string>
     <string name="video">Video: </string>
     <string name="audio">Audio: </string>
+    <string name="comment">Comment: </string>
 
     <string-array name="protocol_array">
         <item>API Key</item>
