--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="post_id_to_remove">Post id to remove: </string>
     <string name="type">Type: </string>
     <string name="blog_to_follow">Blog to follow: </string>
-    <string name="blog_to_unfollow">Blog to follow: </string>
+    <string name="blog_to_unfollow">Blog to unfollow: </string>
 
     <string-array name="protocol_array">
         <item>API Key</item>
